# ecc-triage-automation

./: .gitignore  README.md  arize.py  call_processor.py  docker-compose.arize.yml  emergency_calls.json  output.txt  pyproject.toml  requirements.txt  stuff.py  stuff_with_twilio.py  terminal_output.py  threaded.py  ui.html
.archive/: stuff_with_twilio.py
archive/: arize.py  old_requirements.txt  stuff.py
config/: .env.example
data/: call_logs.json
src/: app.py
src/api/: arize.py  routes.py
src/services/llm/: classifier.py  prompt_templates.py
src/services/twilio/: handlers.py
src/utils/: storage.py
